# dpart

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark.py  perf.csv  requirements.txt  results.csv  setup.cfg  setup.py  speed_eval.py  test.py  visuals.ipynb
data/mini_adult/: clean_data.py  tiny_adult_bounds.pkl
dpar/: __init__.py  dpar.py
dpar/methods/: __init__.py  decision_tree_classifier.py  linear_regression.py  logistic_regression.py  probability_tensor.py  random_forest_classifier.py
dpar/methods/base/: __init__.py  category_sampler.py  classifier_sampler.py  numerical_sampler.py  regressor_sampler.py  sampler.py
dpar/methods/utils/: decorators.py  dp_utils.py  sklearn_encoder.py  stats.py
dpart/: __init__.py  dpart.py
dpart/engines/: __init__.py  dp_synthpop.py  histogram.py  independent.py  priv_bayes.py  synthpop.py
dpart/methods/: __init__.py  decision_tree_classifier.py  histogram_sampler.py  linear_regression.py  logistic_regression.py  probability_tensor.py  random_forest_classifier.py
dpart/methods/base/: __init__.py  category_sampler.py  classifier_sampler.py  numerical_sampler.py  regressor_sampler.py  sampler.py
dpart/methods/utils/: bin_encoder.py  dp_utils.py  sklearn_encoder.py  stats.py
dpart/utils/: kahn.py
dpart/utils/dependencies/: __init__.py  dependency_manager.py  selection.py
experiments/: benchmark.py  benchmark_visuals.ipynb  experiments_requirements.txt  speed.py
experiments/data/: benchmark_results.csv
experiments/data/adult/: clean_data.py
tests/: test_int_cat_over_10.py
