[metadata]
# replace with your username:

name = dpart
version = file: VERSION
author = "Sofiane Mahiou, Kai Xu, Georgi Ganev"
author_email = info@hazy.com
description = "dpart: General, flexible, and scalable framework for differentially private synthetic data generation."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hazy/dpart
project_urls =
    Bug Tracker = https://github.com/hazy/dpart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
